--- a/.github/workflows/CIWorkflow.yml
+++ b/.github/workflows/CIWorkflow.yml
@@ -11,4 +11,4 @@ jobs:
           java-version: 11
           distribution: 'adopt'
       - name: Build with gradle
-        run: ./gradle build
+        run: ./gradlew build
